@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-25T16:19:10Z",
-  "count_outdated" : 68,
-  "uniques_outdated" : 30,
+  "timestamp" : "2022-11-01T00:49:54Z",
+  "count_outdated" : 69,
+  "uniques_outdated" : 31,
   "count" : 71,
   "uniques" : 33,
   "views" : [
-    {
-      "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-24T00:00:00Z",
       "count": 1,
