@@ -1,3 +1,11 @@
+2022-11-01T00:49:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3365889735 # 572
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 30 68 / 33 71
+* notice: next accum: outdated-unq outdated-all / unq all: 31 69 / 33 71
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-17] / []
+
 2022-10-25T16:19:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322585907 # 553
 * notice: last 14d: unq all: 3 3
